# python-sbb-polarion

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  README.md  RELEASE.md  polarion-openapi.json  pyproject.toml  sonar-project.properties  tox.ini  zizmor.yml
.github/workflows/: actionlint.yml  add-issue-to-project.yml  ci.yml  claude-code-review.yml  claude.yml  poetry-build.yml  pr.yml
python_polarion_utils/api/: aad_synchronizer.py  admin_utility.py  api_extender.py  collection_checker.py  cucumber.py  diff_tool.py  dms_doc_connector.py  dms_wi_connector.py  excel_importer.py  extension_api_factory.py  generic.py  hooks.py  jobs.py  json_editor.py  mailworkflow.py  pdf_exporter.py  polarion_api.py  requirements_inspector.py  sbbtool.py  test_data.py
python_polarion_utils/common/: util_argparse.py  util_http.py
python_polarion_utils/generic/tests/: generic_test_case.py  testcontainers_helper.py
python_polarion_utils/polarion/api/: admin_utility.py  api_extender.py  cucumber.py  diff_tool.py  excel_importer.py  hooks.py  jobs.py  json_editor.py  polarion_api.py  qualityanalysis.py
python_sbb_polarion/: __init__.py  py.typed  types.py
python_sbb_polarion/core/: __init__.py  annotations.py  base.py  factory.py
python_sbb_polarion/core/polarion_api/: __init__.py  _base.py  polarion_api_v1.py
python_sbb_polarion/extensions/: __init__.py  _shared_exporter_types.py  aad_synchronizer.py  admin_utility.py  api_extender.py  collection_checker.py  cucumber.py  diff_tool.py  dms_doc_connector.py  dms_wi_connector.py  docx_exporter.py  enumeration_factories.py  excel_importer.py  fake_services.py  integrity_scanner.py  interceptor_manager.py  json_editor.py  mailworkflow.py  pdf_exporter.py  requirements_inspector.py  strictdoc_exporter.py  test_data.py  vcontext.py  xml_repair.py
python_sbb_polarion/extensions/_aad_synchronizer/: __init__.py
python_sbb_polarion/extensions/_admin_utility/: __init__.py  _collection.py  _configuration.py  _custom_fields.py  _document.py  _license.py  _live_report.py  _project.py  _token.py  _vault.py  _wiki.py
python_sbb_polarion/extensions/_api_extender/: __init__.py  _custom_fields.py  _records.py  _regex.py
python_sbb_polarion/extensions/_base/: __init__.py  _mixin.py
python_sbb_polarion/extensions/_collection_checker/: __init__.py  _checks.py  _collections.py  _types.py
python_sbb_polarion/extensions/_cucumber/: __init__.py  _export.py  _features.py  _import.py
python_sbb_polarion/extensions/_diff_tool/: __init__.py  _conversion.py  _difference.py  _merge.py  _settings.py  _utility.py
python_sbb_polarion/extensions/_dms_doc_connector/: __init__.py
python_sbb_polarion/extensions/_dms_wi_connector/: __init__.py
python_sbb_polarion/extensions/_docx_exporter/: __init__.py  _attachments.py  _configuration.py  _conversion.py  _settings.py  _utility.py
python_sbb_polarion/extensions/_excel_importer/: __init__.py  _excel_tool.py  _import.py  _settings.py  _workitems.py
python_sbb_polarion/extensions/_fake_services/: __init__.py  _open_text.py
python_sbb_polarion/extensions/_integrity_scanner/: __init__.py  _integrity_scanner.py
python_sbb_polarion/extensions/_interceptor_manager/: __init__.py  _hooks.py  _settings.py
python_sbb_polarion/extensions/_json_editor/: __init__.py  _attachments.py
python_sbb_polarion/extensions/_mailworkflow/: __init__.py
python_sbb_polarion/extensions/_pdf_exporter/: __init__.py  _attachments.py  _configuration.py  _conversion.py  _settings.py  _types.py  _utility.py
python_sbb_polarion/extensions/_requirements_inspector/: __init__.py  _inspection.py
python_sbb_polarion/extensions/_shared_exporter/: __init__.py  _attachments.py  _configuration.py  _settings.py  _utility.py
python_sbb_polarion/extensions/_strictdoc_exporter/: __init__.py  _export.py
python_sbb_polarion/extensions/_test_data/: __init__.py  _documents.py  _templates.py
python_sbb_polarion/extensions/_xml_repair/: __init__.py  _repair.py
python_sbb_polarion/linter/: __init__.py  __main__.py  _cache.py  _config.py  _helpers.py  _violation.py  _visitor.py  code_style_linter.py
python_sbb_polarion/polarion_project_manager/: __init__.py  __main__.py  cli.py  project_manager.py
python_sbb_polarion/testing/: __init__.py  errors.py  generic_test_case.py  project_template_uploader.py  temp_project.py  testcontainers_helper.py
python_sbb_polarion/util/: __init__.py  argparse.py  environment.py  http.py  ldap.py  mailer.py  oauth.py  path.py  sql.py  ssh.py  sshtunnel.py
tests/: README.md  test_common_util_parser.py
tests/unit/core/: test_annotations.py  test_base.py  test_factory.py  test_polarion_api_v1.py
tests/unit/extensions/: __init__.py  test_aad_synchronizer.py  test_admin_utility.py  test_api_extender.py  test_collection_checker.py  test_cucumber.py  test_diff_tool.py  test_dms_doc_connector.py  test_dms_wi_connector.py  test_docx_exporter.py  test_enumeration_factories.py  test_excel_importer.py  test_fake_services.py  test_integrity_scanner.py  test_interceptor_manager.py  test_json_editor.py  test_mailworkflow.py  test_pdf_exporter.py  test_requirements_inspector.py  test_strictdoc_exporter.py  test_test_data.py  test_vcontext.py  test_xml_repair.py
tests/unit/linter/: __init__.py  test_cache.py  test_config.py  test_helpers.py  test_main.py  test_rules_psp001_005.py  test_rules_psp006_010.py  test_rules_psp011_017.py  test_violation.py
tests/unit/polarion_project_manager/: __init__.py  test_build_parser.py  test_main.py  test_polarion_project_manager.py
tests/unit/testing/: __init__.py  test_generic_test_case.py  test_project_template_uploader.py  test_temp_project.py  test_testcontainers_helper.py
tests/unit/util/: __init__.py  test_argparse.py  test_environment.py  test_http.py  test_ldap.py  test_mailer.py  test_oauth.py  test_path.py  test_sql.py  (+2 more)
tests/verification/: __init__.py  __main__.py  base_test.py  config.py  method_naming.py  openapi_utils.py  parameter_utils.py  test_github.py  test_polarion_api_v1.py  test_polarion_live.py
(+46 files in other folders)
