[tool.poetry]
name = "python-polarion-utils"
version = "0.1.1"
description = ""
authors = [
    "SBB Polarion Team <polarion-opensource@sbb.ch>",
]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/SchweizerischeBundesbahnen/python-polarion-utils"
repository = "https://github.com/SchweizerischeBundesbahnen/python-polarion-utils"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
testcontainers = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"
ruff = "0.9.9"
mypy = "1.15.0"

[tool.poetry.group.test.dependencies]
tox = "^4.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"python_polarion_utils/main.py" = [
    "T201" # No prints
]
"tests/*" = [
    "S101" # No assert rule (bandit)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
