[project]
name = "python-polarion-utils"
version = "0.1.1"
description = ""
authors = [
    { name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
homepage = "https://github.com/SchweizerischeBundesbahnen/python-polarion-utils"
repository = "https://github.com/SchweizerischeBundesbahnen/python-polarion-utils"
requires-python = ">=3.13,<4.0"
[tool.poetry.dependencies]
requests = "2.32.5"
testcontainers = "4.13.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.0"
ruff = "0.14.9"
mypy = "1.19.0"

[tool.poetry.group.test.dependencies]
tox = "4.32.0"
pytest = "9.0.2"
coverage = "7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
